5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3995/executions/1756_1583.log
== TEST (2019-05-23 21:34:00) 
-- CODE:
v=str(int(input("numero multiplo de 3:")))
print(v)
-- OUTPUT:
123
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 21:34:08) 
-- CODE:
v=str(int(input("numero multiplo de 3:")))
print(v)
-- OUTPUT:
123
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 12:51:13) 
-- CODE:
v=str(int(input("numero multiplo de 3:")))
p="."
i=0
while(i<len(s[]))
print(v)
-- ERROR:
File "XXXX", line 4
    while(i<len(s[]))
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 12:59:39) 
-- CODE:
from numpy import*
v=input("numero multiplo de 3:")

f=(v[0:3])
g=(v[3:6])
h=(v[6:])

while(v%3==0):
	if(v==3 and v<100):
		print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:00:00) 
-- CODE:
from numpy import*
v=int(input("numero multiplo de 3:"))

f=(v[0:3])
g=(v[3:6])
h=(v[6:])

while(v%3==0):
	if(v==3 and v<100):
		print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:00:35) 
-- CODE:
from numpy import*
v=input("numero multiplo de 3:")
f=(v[0:3])
g=(v[3:6])
h=(v[6:])

while(f%3==0):
	if(v==3 and v<100):
		print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:01:18) 
-- CODE:
from numpy import*
v=input("numero multiplo de 3:")
f=(v[0:3])
g=(v[3:6])
h=(v[6:])

print(f+"."+g+"."+h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:06:05) 
-- CODE:
from numpy import*
v=input("numero multiplo de 3:")
f=(v[0:3])
g=(v[3:6])
h=(v[6:])
while(v%3==0):
	if(v>=3 and v<1000):
		print(f)
	elif(v>=1000 and v<1000000 ):
		print(f+"."+g)
	elif(v>=1000000 and v<10000000):
		
-- ERROR:
File "XXXX", line 13
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 13:10:05) 
-- CODE:
from numpy import*
v=input("numero multiplo de 3:")
f=(v[0:3])
g=(v[3:6])
h=(v[6:])

-- EXECUTION TIME:
0.356581
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:

-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:

-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:16:38) 
-- CODE:
from numpy import*
v=input("numero multiplo de 3:")
g=0
i=0
n=3
j=len(v)
s=zeros(len(v))
while(g<len(v)):
	if(v%3==0):
		j[i:n]=v[i:n]
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:18:14) 
-- CODE:
from numpy import*
v=input("numero multiplo de 3:")
g=0
i=0
n=3
j=len(v)
s=zeros(len(v))
while(g<len(v)):
	if(v%3==0):
		j[i:n]=v[i:n]
		s=s+j+"."
	g=g+1
print(s)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:18:45) 
-- CODE:
from numpy import*
v=input("numero multiplo de 3:")
g=0
i=0
n=3
j=len(v)
s=zeros(len(v))
while(g<len(v)):
	if(v%3==0):
		j[i:n]=v[i:n]
		s=s+j+"."
	else:
		s=s+0
	g=g+1
print(s)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:19:12) 
-- CODE:
from numpy import*
v=input("numero multiplo de 3:")
g=0
i=0
n=3
j=size(v)
s=zeros(size(v))
while(g<size(v)):
	if(v%3==0):
		j[i:n]=v[i:n]
		s=s+j+"."
	else:
		s=s+0
	g=g+1
print(s)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:19:20) 
-- CODE:
from numpy import*
v=input("numero multiplo de 3:")
g=0
i=0
n=3
j=size(v)
s=zeros(size(v))
while(g<size(v)):
	if(v%3==0):
		j[i:n]=v[i:n]
		s=s+j+"."
	else:
		s=s+0
	g=g+1
print(s)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:40:03) 
-- CODE:
from numpy import*
v=str(input("numero multiplo de 3:"))
aux = 0
for i in range(len(v)):
	aux = i+3
	if aux >=len(v):
		break
	v.append('.')
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:44:08) 
-- CODE:
from numpy import*
v=str(input("numero multiplo de 3:"))
aux = 0
for i in range(len(v)):
	aux = i+3
	if aux >=len(v):
		break
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:44:18) 
-- CODE:
from numpy import*
v=str(input("numero multiplo de 3:"))
print(v)
aux = 0
for i in range(len(v)):
	aux = i+3
	if aux >=len(v):
		break
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:44:46) 
-- CODE:
from numpy import*
v=str(input("numero multiplo de 3:"))
print(v)
aux = 0
for i in range(len(v)):
	aux = i+3
	if aux >=len(v):
		break

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:44:53) 
-- CODE:
from numpy import*
v=str(input("numero multiplo de 3:"))
print(v[0])
aux = 0
for i in range(len(v)):
	aux = i+3
	if aux >=len(v):
		break

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:45:31) 
-- CODE:
from numpy import*
v=str(input("numero multiplo de 3:"))
aux = 0
for i in range(len(v)):
	aux = i+3
	if aux >=len(v):
		break
	v[aux].append('.')
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:46:44) 
-- CODE:
from numpy import*
v=str(input("numero multiplo de 3:"))
aux = 0
for i in range(len(v)):
	aux = i+3
	if aux >=len(v):
		break
	v[aux].append(".")
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:47:22) 
-- CODE:
from numpy import*
v=str(input("numero multiplo de 3:"))
aux = 0
for i in range(len(v)):
	aux = i+3
	if aux >=len(v):
		break
	v.append("."+aux)
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:52:29) 
-- CODE:
from numpy import*
v=str(input("numero multiplo de 3:"))
aux = 0
for i in range(len(v)):
	aux = i+3
	if aux >=len(v):
		break
	v = v[aux].split(".")
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:53:00) 
-- CODE:
from numpy import*
v=str(input("numero multiplo de 3:"))
aux = 0
for i in range(len(v)):
	aux = i+3
	if aux >=len(v):
		break
	v = v.split(".")
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:53:36) 
-- CODE:
from numpy import*
v=str(input("numero multiplo de 3:"))
aux = 0
for i in range(len(v)):
	aux = i+3
	if aux >=len(v):
		break
	v = v[aux].append(".")
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:56:05) 
-- CODE:
from numpy import*
v=str(input("numero multiplo de 3:"))
aux = 0
for i in range(len(v)):
	aux = i+3
	if aux >=len(v):
		break
	v = v[aux-1]+"."+v[aux::]
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:56:47) 
-- CODE:
from numpy import*
v=str(input("numero multiplo de 3:"))
aux = 0
for i in range(len(v)):
	aux = i+3
	if aux >=len(v):
		break
	v = v[0::aux-1]+"."+v[aux::]
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:57:22) 
-- CODE:
from numpy import*
v=str(input("numero multiplo de 3:"))
aux = 0
for i in range(len(v)):
	aux = i+3
	if aux >=len(v):
		break
	v = v[::aux-1]+v[aux-1]+"."+v[aux::]
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:57:39) 
-- CODE:
from numpy import*
v="123456789"     #str(input("numero multiplo de 3:"))
aux = 0
for i in range(len(v)):
	aux = i+3
	if aux >=len(v):
		break
	v = v[::aux-1]+v[aux-1]+"."+v[aux::]
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:59:19) 
-- CODE:
from numpy import*
v="123456789"     #str(input("numero multiplo de 3:"))
aux = 0
for i in range(0,len(v),3):
	v = v[0::i]+"."+v[i::len(v)-1]
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:59:41) 
-- CODE:
from numpy import*
v="123456789"     #str(input("numero multiplo de 3:"))
aux = 0
for i in range(0,len(v),3):
	v = v[i]+"."
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:03:57) 
-- CODE:
from numpy import*
v="123456789"     #str(input("numero multiplo de 3:"))
print(v[1])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:04:04) 
-- CODE:
from numpy import*
v="123456789"     #str(input("numero multiplo de 3:"))
print(v[4])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:07:52) 
-- CODE:
from numpy import*
v="123456789"     #str(input("numero multiplo de 3:"))
print(v[4])
c =0
i = 1
s = ""
while(c < size(v)):
	if i == 4:
		i = 1
		s = s + "."
	s = s + v[c]
	i=i+1
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:07:57) 
-- CODE:
from numpy import*
v="123456789"     #str(input("numero multiplo de 3:"))
print(v[4])
c =0
i = 1
s = ""
while(c < size(v)):
	if i == 4:
		i = 1
		s = s + "."
	s = s + v[c]
	i=i+1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:08:02) 
-- CODE:
from numpy import*
v="123456789"     #str(input("numero multiplo de 3:"))
print(v[4])
c =0
i = 1
s = ""
while(c < size(v)):
	if i == 4:
		i = 1
		s = s + "."
	s = s + v[c]
	i=i+1
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:08:14) 
-- CODE:
from numpy import*
v="123456789"     #str(input("numero multiplo de 3:"))
print(v[4])
c =0
i = 1
s = ""
while(c < len(v)):
	if i == 4:
		i = 1
		s = s + "."
	s = s + v[c]
	i=i+1
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:08:25) 
-- CODE:
from numpy import*
v="123456789"     #str(input("numero multiplo de 3:"))
print(v[4])
c =0
i = 1
s = ""
print(len(v))
while(c < len(v)):
	if i == 4:
		i = 1
		s = s + "."
	s = s + v[c]
	i=i+1
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:08:52) 
-- CODE:
from numpy import*
v="123456789"     #str(input("numero multiplo de 3:"))
#print(v[4])
c =0
i = 1
s = ""
print(len(v))
while(c < len(v)):
	if i == 4:
		i = 1
		s = s + "."
	s = s + v[c]
	i=i+1
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:09:10) 
-- CODE:
from numpy import*
v="123456789"     #str(input("numero multiplo de 3:"))
#print(v[4])
c =0
i = 1
s = ""
#print(len(v))
while(c < len(v)):
	if i == 4:
		i = 1
		s = s + "."
	s = s + v[c]
	i=i+1
	c = c +1
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:15:16) 
-- CODE:
from numpy import*
v="987654321"     #str(input("numero multiplo de 3:"))
#print(v[4])
c =0
i = 3
s = ""
#print(len(v))
while(c < len(v)):
	if i == 3:
		i = 0
		s = s + "."
	s = s + v[c]
	i=i+1
	c = c +1
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 14:15:28) 
-- CODE:
from numpy import*
v="987654321"     #str(input("numero multiplo de 3:"))
#print(v[4])
c =0
i = 3
s = ""
#print(len(v))
while(c < len(v)):
	if i == 3:
		i = 0
		s = s + "."
	s = s + v[c]
	i=i+1
	c = c +1
print(s)
-- EXECUTION TIME:
0.48155
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
.987.654.321
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
.987.654.321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
.987.654.321
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:15:29) 
-- CODE:
from numpy import*
v="987654321"     #str(input("numero multiplo de 3:"))
#print(v[4])
c =0
i = 3
s = ""
#print(len(v))
while(c < len(v)):
	if i == 3:
		i = 0
		s = s + "."
	s = s + v[c]
	i=i+1
	c = c +1
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:15:36) 
-- CODE:
from numpy import*
v=str(input("numero multiplo de 3:"))
#print(v[4])
c =0
i = 3
s = ""
#print(len(v))
while(c < len(v)):
	if i == 3:
		i = 0
		s = s + "."
	s = s + v[c]
	i=i+1
	c = c +1
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:16:07) 
-- CODE:
from numpy import*
v=str(input("numero multiplo de 3:"))
#print(v[4])
c =0
i = 1
s = ""
#print(len(v))
while(c < len(v)):
	if i == 4:
		i = 1
		s = s + "."
	s = s + v[c]
	i=i+1
	c = c +1
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:16:15) 
-- CODE:
from numpy import*
v=str(input("numero multiplo de 3:"))
#print(v[4])
c =0
i = 1
s = ""
#print(len(v))
while(c < len(v)):
	if i == 4:
		i = 1
		s = s + "."
	s = s + v[c]
	i=i+1
	c = c +1
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:16:41) 
-- CODE:
from numpy import*
v=str(input("numero multiplo de 3:"))
#print(v[4])
c =0
i = 1
s = ""
#print(len(v))
while(c < len(v)):
	if (i == 4):
		i = 1
		s = s + "."
	s = s + v[c]
	i=i+1
	c = c +1
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 14:16:51) 
-- CODE:
from numpy import*
v=str(input("numero multiplo de 3:"))
#print(v[4])
c =0
i = 1
s = ""
#print(len(v))
while(c < len(v)):
	if (i == 4):
		i = 1
		s = s + "."
	s = s + v[c]
	i=i+1
	c = c +1
print(s)
-- EXECUTION TIME:
0.470405
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.456.789.000.987.654.321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:17:21) 
-- CODE:

v=str(input("numero multiplo de 3:"))

c =0
i = 1
s = ""

while(c < len(v)):
	if (i == 4):
		i = 1
		s = s + "."
	s = s + v[c]
	i=i+1
	c = c +1
print(s)
-- OUTPUT:
123
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 14:17:22) 
-- CODE:

v=str(input("numero multiplo de 3:"))

c =0
i = 1
s = ""

while(c < len(v)):
	if (i == 4):
		i = 1
		s = s + "."
	s = s + v[c]
	i=i+1
	c = c +1
print(s)
-- EXECUTION TIME:
0.12427
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.456.789.000.987.654.321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:18:50) 
-- CODE:

v=str(input("numero multiplo de 3:"))

c =0
i = 1
s = ""

while(c < len(v)):
	if (i == 4):
		i = 1
		s = s + "."
	s = s + v[c]
	i=i+1
	c = c +1
print(s)
-- OUTPUT:
123
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:18:57) 
-- CODE:

v=str(input("numero multiplo de 3:"))

c =0
i = 1
s = ""

while(c < len(v)):
	if (i == 4):
		i = 1
		s = s + "."
	s = s + v[c]
	i=i+1
	c = c +1
print(s)
-- OUTPUT:
123
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:18:59) 
-- CODE:

v=str(input("numero multiplo de 3:"))

c =0
i = 1
s = ""

while(c < len(v)):
	if (i == 4):
		i = 1
		s = s + "."
	s = s + v[c]
	i=i+1
	c = c +1
print(s)
-- OUTPUT:
123
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:19:03) 
-- CODE:

v=str(input("numero multiplo de 3:"))

c =0
i = 1
s = ""

while(c < len(v)):
	if (i == 4):
		i = 1
		s = s + "."
	s = s + v[c]
	i=i+1
	c = c +1
print(s)
-- OUTPUT:
123
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:19:07) 
-- CODE:

v=str(input("numero multiplo de 3:"))

c =0
i = 1
s = ""

while(c < len(v)):
	if (i == 4):
		i = 1
		s = s + "."
	s = s + v[c]
	i=i+1
	c = c +1
print(s)
-- OUTPUT:
123
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:19:17) 
-- CODE:

v=str(input("numero multiplo de 3:"))

c =0
i = 1
s = ""

while(c < len(v)):
	if (i == 4):
		i = 1
		s = s + "."
	s = s + v[c]
	i=i+1
	c = c +1
print(s)
-- OUTPUT:
123
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
